Added HTML and CSS using the grid property. Added on-screen keyboard and styles for keys and text.

--- a/wordle.html
+++ b/wordle.html
@@ -3,12 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Matt's Wordle Game</title>
     <link rel="stylesheet" href="./style.css">
     <script defer src="./script-files/script.js"></script>
     <script defer src="./script-files/5-letter-words.js"></script>`
 </head>
-<body>
-    
-</body>
+    <body>
+        <h1>Mattdle</h1>
+        <div class="game-grid">
+            <div class="letter letter-1">h</div>
+            <div class="letter letter-2">e</div>
+            <div class="letter letter-3">l</div>
+            <div class="letter letter-4">l</div>
+            <div class="letter letter-5">o</div>
+            <div class="letter letter-6">t</div>
+            <div class="letter letter-7">h</div>
+            <div class="letter letter-8">e</div>
+            <div class="letter letter-9">r</div>
+            <div class="letter letter-10">e</div>
+            <div class="letter letter-11"></div>
+            <div class="letter letter-12"></div>
+            <div class="letter letter-13"></div>
+            <div class="letter letter-14"></div>
+            <div class="letter letter-15"></div>
+            <div class="letter letter-16"></div>
+            <div class="letter letter-17"></div>
+            <div class="letter letter-18"></div>
+            <div class="letter letter-19"></div>
+            <div class="letter letter-20"></div>
+            <div class="letter letter-21"></div>
+            <div class="letter letter-22"></div>
+            <div class="letter letter-23"></div>
+            <div class="letter letter-24"></div>
+            <div class="letter letter-25"></div>
+            <div class="letter letter-26"></div>
+            <div class="letter letter-27"></div>
+            <div class="letter letter-28"></div>
+            <div class="letter letter-29"></div>
+            <div class="letter letter-30"></div>
+        </div>
+        <div class="keyboard">
+            <div class="top-row">
+                <div class="key q-key">Q</div>
+                <div class="key w-key">W</div>
+                <div class="key e-key">E</div>
+                <div class="key r-key">R</div>
+                <div class="key T-key">T</div>
+                <div class="key y-key">Y</div>
+                <div class="key u-key">U</div>
+                <div class="key i-key">I</div>
+                <div class="key o-key">O</div>
+                <div class="key p-key">P</div>
+            </div>
+            <div class="middle-row">
+                <div class="key a-key">A</div>
+                <div class="key s-key">S</div>
+                <div class="key d-key">D</div>
+                <div class="key f-key">F</div>
+                <div class="key g-key">G</div>
+                <div class="key h-key">H</div>
+                <div class="key j-key">J</div>
+                <div class="key k-key">K</div>
+                <div class="key l-key">L</div>
+            </div>
+            <div class="bottom-row">
+                <div class="key z-key">Z</div>
+                <div class="key x-key">X</div>
+                <div class="key c-key">C</div>
+                <div class="key v-key">V</div>
+                <div class="key b-key">B</div>
+                <div class="key n-key">N</div>
+                <div class="key m-key">M</div>
+            </div>
+        </div>
+    </body>
 </html>
