Added input from user to the grid, also added animation for the first line.

--- a/wordle.html
+++ b/wordle.html
@@ -6,42 +6,11 @@
     <title>Matt's Wordle Game</title>
     <link rel="stylesheet" href="./style.css">
     <script defer src="./script-files/script.js"></script>
-    <script defer src="./script-files/5-letter-words.js"></script>`
+    <script defer src="./script-files/5-letter-words.js"></script>
 </head>
     <body>
         <h1>Mattdle</h1>
-        <div class="game-grid">
-            <div class="letter letter-1">h</div>
-            <div class="letter letter-2">e</div>
-            <div class="letter letter-3">l</div>
-            <div class="letter letter-4">l</div>
-            <div class="letter letter-5">o</div>
-            <div class="letter letter-6">t</div>
-            <div class="letter letter-7">h</div>
-            <div class="letter letter-8">e</div>
-            <div class="letter letter-9">r</div>
-            <div class="letter letter-10">e</div>
-            <div class="letter letter-11"></div>
-            <div class="letter letter-12"></div>
-            <div class="letter letter-13"></div>
-            <div class="letter letter-14"></div>
-            <div class="letter letter-15"></div>
-            <div class="letter letter-16"></div>
-            <div class="letter letter-17"></div>
-            <div class="letter letter-18"></div>
-            <div class="letter letter-19"></div>
-            <div class="letter letter-20"></div>
-            <div class="letter letter-21"></div>
-            <div class="letter letter-22"></div>
-            <div class="letter letter-23"></div>
-            <div class="letter letter-24"></div>
-            <div class="letter letter-25"></div>
-            <div class="letter letter-26"></div>
-            <div class="letter letter-27"></div>
-            <div class="letter letter-28"></div>
-            <div class="letter letter-29"></div>
-            <div class="letter letter-30"></div>
-        </div>
+        <div class="game-grid"></div>
         <div class="keyboard">
             <div class="top-row">
                 <div class="key q-key">Q</div>
@@ -54,6 +23,7 @@
                 <div class="key i-key">I</div>
                 <div class="key o-key">O</div>
                 <div class="key p-key">P</div>
+                <div class="key clear-key">Clear</div>
             </div>
             <div class="middle-row">
                 <div class="key a-key">A</div>
