Added a random word generator and working on colors for if the word is correct.

--- a/wordle.html
+++ b/wordle.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matt's Wordle Game</title>
     <link rel="stylesheet" href="./style.css">
-    <script defer src="./script-files/script.js"></script>
-    <script defer src="./script-files/5-letter-words.js"></script>
+    <script defer type="module" src="./script-files/script.js"></script>
+    <script defer type="module" src="./script-files/5-letter-words.js"></script>
 </head>
     <body>
         <h1>Mattdle</h1>
