--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <h1>Mattdle</h1>
         <div class="game-grid"></div>
+        <button class="reset">Reset</button>
         <div class="keyboard">
             <div class="top-row">
                 <div class="key q-key">Q</div>
