Added clear button functionality.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
     <body>
         <h1>Mattdle</h1>
+        <p class="message"></p>
         <div class="game-grid"></div>
         <button class="reset">Reset</button>
         <div class="keyboard">
