--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
     <body>
         <h1>Mattdle</h1>
+        <button class="dropbtn">Right</button>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+        </div>
         <p class="message"></p>
         <div class="game-grid"></div>
         <button class="reset">Reset</button>
