Made everything uppercase.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 </head>
     <body>
         <h1>Mattdle</h1>
-        <button class="dropbtn">Right</button>
-        <div class="dropdown-content">
-          <a href="#">Link 1</a>
+        <div class="dropdown">
+            <button class="help">?</button>
+                <div class="dropdown-help">
+                    <a>Help</a>
+                </div>
         </div>
         <p class="message"></p>
         <div class="game-grid"></div>
         <button class="reset">Reset</button>
+        
         <div class="keyboard">
             <div class="top-row">
                 <div class="key q-key">Q</div>
