Added a help dropdown menu.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <script defer type="module" src="./script-files/5-letter-words.js"></script>
 </head>
     <body>
-        <h1>Mattdle</h1>
-        <div class="dropdown">
+        <h1>Mattdle (Wordle)</h1>
+        <div class="dropDownMenu">
             <button class="help">?</button>
-                <div class="dropdown-help">
-                    <a>Help</a>
-                </div>
-        </div>
+            <div class="dropdown-content">
+                <a>Enter a five letter word to see if it matches the random word! You will get clues to narrow down your search as you guess. You are allowed 6 tries!</a>
+            </div>
+          </div>
         <p class="message"></p>
         <div class="game-grid"></div>
         <button class="reset">Reset</button>
